--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,6 @@
 HTTP_HOST=127.0.0.1
 HTTP_PORT=8080
 DB_URL=postgres://root:root@localhost:5432/sdmedik
+
+JWT_SECRET=azxsertgbji8765edvbnj
+JWT_EXP=24 # hour
