--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^6.1.6",
     "@mui/styled-engine-sc": "^6.1.6",
     "@mui/styles": "^6.1.6",
+    "@mui/x-data-grid": "^7.23.2",
     "axios": "^1.7.8",
     "framer-motion": "^11.12.0",
     "js-cookie": "^3.0.5",
