--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,8 +22,10 @@
     "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.1",
     "react-router-dom": "^6.27.0",
     "react-slick": "^0.30.2",
+    "react-yandex-maps": "^4.6.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.13",
     "swiper": "^11.1.15",
