--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^7.54.1",
     "react-router-dom": "^6.27.0",
     "react-slick": "^0.30.2",
