--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,8 @@
 HTTP_HOST=127.0.0.1
 HTTP_PORT=8080
 
+IMAGE_DIR=./image/
+
 POSTGRES_URL=postgres://root:root@localhost:5432/sdmedik
 REDIS_URL=localhost:6379
 
