--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "react-hook-form": "^7.54.1",
     "react-router-dom": "^6.27.0",
     "react-slick": "^0.30.2",
+    "react-toastify": "^11.0.2",
     "react-yandex-maps": "^4.6.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.13",
