--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.7.8",
     "framer-motion": "^11.12.0",
     "js-cookie": "^3.0.5",
+    "json-stringify-safe": "^5.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
