--- a/backend/.env
+++ b/backend/.env
@@ -8,6 +8,10 @@ REDIS_URL=localhost:6379
 
 VERIFY_CODE_EXPIRED_IN=5m
 
+PAY_KEEPER_USER=admin
+PAY_KEEPER_PASS='1$Fgtkmcby2019#'
+PAY_KEEPER_SERVER=https://sdmedik.server.paykeeper.ru
+
 MAIL_HOST=smtp.gmail.com 
 MAIL_USER=fakeroot94@gmail.com     
 MAIL_PASSWORD=memm cchg tscz gioi 
