change setting by docker

--- a/backend/.env
+++ b/backend/.env
@@ -1,11 +1,11 @@
-HTTP_HOST=127.0.0.1
+HTTP_HOST=0.0.0.0
 # HTTP_HOST=192.168.4.9
 HTTP_PORT=8080
 
 IMAGE_DIR=./image/
 
-POSTGRES_URL=postgres://root:root@localhost:5432/sdmedik
-REDIS_URL=localhost:6379
+POSTGRES_URL=postgres://root:root@postgres:5432/sdmedik
+REDIS_URL=redis:6379
 
 VERIFY_CODE_EXPIRED_IN=5m
 
@@ -13,6 +13,7 @@ PAY_KEEPER_USER=admin
 PAY_KEEPER_PASS='1$Fgtkmcby2019#'
 PAY_KEEPER_SERVER=https://sdmedik.server.paykeeper.ru
 
+MAIL_TEMPLATE_PATH=./template/
 MAIL_HOST=smtp.gmail.com 
 MAIL_USER=fakeroot94@gmail.com     
 MAIL_PASSWORD=memm cchg tscz gioi 
