--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -12,6 +12,25 @@ services:
       - postgres_data:/var/lib/postgresql/data
     ports:
       - 5432:5432
+    networks:
+      - app-network
+
+
+  backend:
+    build: .
+    container_name: backend
+    ports:
+      - "8080:8080"
+    volumes:
+      - ./image:/app/image
+      # - ./product_index:/app/product_index
+      - ./pkg/mailer/template:/app/template
+    depends_on:
+      - postgres
+      - redis
+    networks:
+      - app-network  # Используем сеть для связи между сервисами
+
 
   redis:
     image: redis:alpine
@@ -20,7 +39,13 @@ services:
       - '6379:6379'
     volumes:
       - redis_data:/data
+    networks:
+      - app-network
 
 volumes:
   postgres_data:
   redis_data:
+
+networks:
+  app-network:  # Создаем сеть для связи между сервисами
+    driver: bridge
