--- a/backend/.env
+++ b/backend/.env
@@ -2,6 +2,8 @@ HTTP_HOST=0.0.0.0
 # HTTP_HOST=192.168.4.9
 HTTP_PORT=8080
 
+CORS_ORIGIN=http://89.104.71.31:80
+
 IMAGE_DIR=./image/
 
 POSTGRES_URL=postgres://root:root@postgres:5432/sdmedik
