--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,13 +29,13 @@
     "react-hook-form": "^7.54.1",
     "react-router-dom": "^6.27.0",
     "react-slick": "^0.30.2",
-    "react-snap": "^1.23.0",
     "react-toastify": "^11.0.2",
     "react-yandex-maps": "^4.6.0",
     "recharts": "^2.15.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.13",
     "swiper": "^11.2.1",
+    "vite-plugin-compression": "^0.5.1",
     "zustand": "^5.0.1"
   },
   "devDependencies": {
