upd: category and product moule, add product category table(many2many)

--- a/backend/.env
+++ b/backend/.env
@@ -4,7 +4,7 @@ HTTP_PORT=8080
 
 CORS_ORIGIN=http://89.104.71.31:80
 
-IMAGE_DIR=../file/
+IMAGE_DIR=./file/
 
 # POSTGRES_URL=postgres://root:root@postgres:5432/sdmedik
 POSTGRES_URL=postgresql://postgres.jkxejpsxyzfmzcvxyxbw:7yy0yxxIkLJOSuIq@aws-0-eu-central-1.pooler.supabase.com:5432/postgres
@@ -17,7 +17,7 @@ PAY_KEEPER_USER=admin
 PAY_KEEPER_PASS='1$Fgtkmcby2019#'
 PAY_KEEPER_SERVER=https://sdmedik.server.paykeeper.ru
 
-MAIL_TEMPLATE_PATH=../shared/mailer/template/
+MAIL_TEMPLATE_PATH=./shared/mailer/template/
 MAIL_HOST=smtp.gmail.com 
 MAIL_USER=fakeroot94@gmail.com     
 MAIL_PASSWORD=memm cchg tscz gioi 
