--- a/backend/docker/docker-compose.yml
+++ b/backend/docker/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   postgres:
-    image: postgres:14
+    image: postgres:alpine
     container_name: postgres
     environment:
       POSTGRES_USER: root
