[upd]: upd workflows

--- a/.github/workflows/restrict-pull-request.yml
+++ b/.github/workflows/restrict-pull-request.yml
@@ -20,7 +20,7 @@ jobs:
           OWNER="fi44er"  # Замени на своё имя пользователя (владелец репозитория)
 
           # Проверяем, что автор PR — test
-          if [ "$PR_AUTHOR" == "Valey88" ]; then
+          if [ "$PR_AUTHOR" == "vitaly06" ]; then
             echo "PR создан пользователем $PR_AUTHOR"
 
             # Проверяем, есть ли одобрение от владельца
