--- a/.github/workflows/restrict-test-push.yml
+++ b/.github/workflows/restrict-test-push.yml
@@ -15,7 +15,7 @@ jobs:
           BRANCH_NAME=${{ github.ref_name }}  # Имя ветки
 
           # Проверяем, что это test
-          if [ "$USER" == "Valey88" ]; then
+          if [ "$USER" == "vitaly06" ]; then
             if [ "$BRANCH_NAME" != "frontend" ]; then
               echo "Ошибка: $USER может пушить только в ветку frontend, а не в $BRANCH_NAME"
               exit 1
