[upd]: update session pkg

--- a/backend/.env
+++ b/backend/.env
@@ -17,7 +17,7 @@ PAY_KEEPER_USER=admin
 PAY_KEEPER_PASS='1$Fgtkmcby2019#'
 PAY_KEEPER_SERVER=https://sdmedik.server.paykeeper.ru
 
-MAIL_TEMPLATE_PATH=./shared/mailer/template/
+MAIL_TEMPLATE_PATH=./pkg/mailer/template/
 MAIL_HOST=smtp.gmail.com 
 MAIL_USER=fakeroot94@gmail.com     
 MAIL_PASSWORD=memm cchg tscz gioi 
