--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@mui/styles": "^6.1.6",
     "@mui/x-data-grid": "^7.23.2",
     "axios": "^1.7.8",
+    "crypto-js": "^4.2.0",
     "dotenv": "^16.4.7",
     "framer-motion": "^11.12.0",
     "js-cookie": "^3.0.5",
