--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@mui/styled-engine-sc": "^6.1.6",
     "@mui/styles": "^6.1.6",
     "@mui/x-data-grid": "^7.23.2",
+    "@tanstack/react-query": "^5.75.7",
     "axios": "^1.7.8",
     "crypto-js": "^4.2.0",
     "dotenv": "^16.4.7",
