--- a/backend/.env
+++ b/backend/.env
@@ -2,7 +2,7 @@ HTTP_HOST=0.0.0.0
 # HTTP_HOST=192.168.4.9
 HTTP_PORT=8080
 
-FRONTEND_URL="https://sdmedik.ru"
+FRONTEND_URL="http://localhost:5173"
 RESET_PASS_LINK="/reset-password"
 RESET_PASS_CODE_EXPIRED_IN=30m
 
