--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,30 +1,19 @@
-# Используем конкретную версию Golang для лучшей предсказуемости
-FROM golang:1.23-alpine AS builder
+# Используем базовый образ Go на Alpine
+FROM golang:1.23-alpine
 
-# Устанавливаем рабочую директорию
+# Устанавливаем GCC и зависимости для сборки
+RUN apk update && apk add --no-cache build-base
+
+# Копируем исходный код
 WORKDIR /app
-
-# Копируем только необходимые файлы для скачивания зависимостей
-COPY go.mod go.sum ./
-RUN go mod download
-
-# Копируем все файлы проекта
 COPY . .
 
-# Оптимизируем сборку, чтобы исключить ненужные зависимости и уменьшить размер образа
-RUN CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o main ./cmd
+# Скачиваем зависимости и собираем приложение
+RUN go mod download && \
+    CGO_ENABLED=1 GOOS=linux go build -o main ./cmd
 
-# Создаем минимальный контейнер для запуска приложения
-FROM alpine:latest
-
-# Устанавливаем рабочую директорию
-WORKDIR /app
-
-# Копируем скомпилированный бинарный файл из предыдущего этапа
-COPY --from=builder /app/main .
-COPY .env .
-# Указываем порт, который будет использовать приложение
+# Открываем порт (опционально)
 EXPOSE 8080
 
-# Определяем команду запуска контейнера
+# Запускаем приложение
 CMD ["./main"]
